# NICS

./: .gitignore  .gitmodules
led_rse/: CMakeLists.txt  package.xml
led_rse/include/led_rse/: aiekf.hpp  cameraModel.hpp  vdrse.h  vdrse_lib.h  vdrse_nodelet.h
led_rse/launch/: estimation_nodelets.launch  vrpn.launch
led_rse/launch/configs/: VDRSE_SUBPUB_topics.yaml  alan_normal.json  alan_pose_estimation.yaml
led_rse/src/: RosTopicConfigs.cpp  com.cpp  config.cpp  feature.cpp  main_process.cpp  temp1  temp2  vdrse.cpp  vdrse_lib.cpp  vdrse_nodelet.cpp
misc/: imu.sh  record.sh  transmit.sh
misc/0811_rosbag/: transmit.sh
nics_rse/: CMakeLists.txt  package.xml
nics_rse/include/nics_rse/: RosTopicConfigs.h  aiekf.hpp  cameraModel.hpp  essential.h  vdrse_lib.h  vdrse_nodelet.h
nics_rse/launch/: camera.launch  estimation_nodelets.launch
nics_rse/launch/configs/: VDRSE_SUBPUB_topics.yaml  nics_pose_estimation.yaml
nics_rse/msg/: vdrse_log.msg
nics_rse/plugins/: nodelets.xml
nics_rse/src/: camera_extrinsic.cpp  com.cpp  config.cpp  feature.cpp  main_process.cpp  sys_id.cpp  vdrse_lib.cpp  vdrse_nodelet.cpp
nics_rse/src/lib/: config.cpp  eso.cpp  led.cpp  log.cpp  main_process.cpp
nics_uav/: CMakeLists.txt  package.xml
nics_uav/include/nics_uav/: ctrl_server.h  planner_server.h
nics_uav/launch/: wrench.launch
nics_uav/launch/configs/: ctrl.yaml  predefined.yaml
nics_uav/src/: ctrl_server.cpp  dist.cpp  uav_path.cpp  wrench.cpp
nics_ugv/launch/: physique_car.launch
nics_ugv/launch/configs/: GAZEBO_CAR_SUBPUB_topics.yaml
nics_ugv/src/: RosTopicConfigs.cpp  physique_car.cpp  virtual_car.cpp
nics_ugv/src/include/: RosTopicConfigs.h  essential.h  ugvpath.hpp
nics_visualization/: CMakeLists.txt  package.xml
nics_visualization/launch/: ctrl_log.launch  data_log.launch  rviz.launch  wrench_test.sh
nics_visualization/launch/configs/: led.yaml  nics.rviz
nics_visualization/logs/scripts/: error.py  land_misc.py  land_plot_all.py  land_plot_all_velo.py  land_plot_ctrl.py  land_plot_ctrl_compare.py  land_plot_ctrl_error.py  land_plot_posi.py  land_plot_velo.py  ms_ctrl.py  ms_est.py  occlu.py  plot_save_land_csv.py  plot_save_velo_csv.py  rse_graphs.py  rse_posi.py  rse_velo.py  touchdown.py  touchdown_boxplot.py  touchdown_percentage.py
nics_visualization/logs/thesis/: 0821_ctrl_tracking_A.csv  0821_ctrl_tracking_B.csv  0821_ctrl_tracking_C.csv  0821_rse_led_circle_A.csv  0821_rse_led_circle_B.csv  0821_rse_led_circle_C.csv  0821_rse_led_circle_D.csv  0821_rse_led_circle_dist_A.csv  0821_rse_led_circle_dist_B.csv  0821_rse_led_circle_dist_C.csv  0821_rse_led_circle_dist_D.csv  0821_rse_led_hover_A.csv  0821_rse_led_hover_C.csv  0821_rse_led_linear_A.csv  0821_rse_led_linear_B.csv  0821_rse_led_linear_C.csv  0821_rse_led_linear_D.csv  0821_rse_led_rotate_A.csv  0821_rse_led_rotate_B.csv  0821_rse_led_rotate_C.csv  0821_rse_led_rotate_D.csv  0821_rse_uav_circle_A.csv  0821_rse_uav_circle_B.csv  0821_rse_uav_circle_C.csv  0821_rse_uav_circle_D.csv  0821_rse_uav_circle_dist_A.csv  0821_rse_uav_circle_dist_B.csv  0821_rse_uav_circle_dist_C.csv  0821_rse_uav_circle_dist_D.csv  0821_rse_uav_hover_A.csv  0821_rse_uav_hover_C.csv  0821_rse_uav_linear_A.csv  0821_rse_uav_linear_B.csv  0821_rse_uav_linear_C.csv  0821_rse_uav_linear_D.csv  0821_rse_uav_rotate_A.csv  0821_rse_uav_rotate_B.csv  0821_rse_uav_rotate_C.csv  0821_rse_uav_rotate_D.csv
nics_visualization/src/: ctrl_log.cpp  data.cpp
uav_ctrl/: CMakeLists.txt  package.xml
uav_ctrl/include/nics_uav/: planner_server.h  uavpath_lib.hpp
uav_ctrl/launch/: ctrl.launch  path.launch
uav_ctrl/launch/configs/: ctrl.yaml  predefined.yaml
uav_ctrl/src/: ctrl_node.cpp  ctrl_server.cpp  planner_node.cpp  planner_server.cpp
uav_ctrl/src/include/: planner_server.h  uavpath_lib.hpp
ugv_ctrl/: CMakeLists.txt  package.xml
ugv_ctrl/launch/: physique_car.launch  virtual_car.launch
ugv_ctrl/src/: physique_car.cpp  virtual_car.cpp
